# moonbox-desktop

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  humans.txt  index.html  llm.txt  package.json  pnpm-lock.yaml  robots.txt  vite.config.ts
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATES/: 01-deployment.yml  02-usage.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml  seo-geo.yml
.well-known/: security.txt
docs/: microsoft-store.md
docs/app-icons/: README.md
docs/plans/: 2026-06-29-controlbar-refactor-design.md
docs/social/: README.md
scripts/: check-icons.py  sync-frpc.sh
src/: AGENTS.md  App.vue  i18n.ts  main.ts  styles.css  types.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.microsoftstore.conf.json
src-tauri/capabilities/: default.json  logs.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  frpc_state.rs  frpc_update.rs  latency.rs  lib.rs  main.rs  prefs.rs  process.rs  proxy_health.rs  proxy_relay.rs  scheduler.rs  tray.rs  types.rs
src/commands/: config.ts  frpc.ts  latency.ts  prefs.ts
src/components/: CloseConfirm.vue  TitleBar.vue  Toast.vue
src/components/banners/: UpdateBanners.vue
src/components/home/: CircleButton.vue  ControlBar.vue  GuideCard.vue  ProxyList.vue  StartButton.vue  SystemStatus.vue  TrafficChart.vue
src/components/settings/: AboutTab.vue  InterfaceTab.vue  LaunchTab.vue  LogsTab.vue  ProviderTab.vue  ProxyTab.vue  ScheduleSection.vue  UpdatesTab.vue
src/composables/: useAppEvents.ts  useAppUpdate.ts  useFrpcUpdate.ts  useLogsWindow.ts  useParticles.ts  useProxyHealth.ts  useToast.ts  useTraffic.ts
src/locales/: en.ts  zh-CN.ts
src/state/: builtin-providers.ts  config.ts  index.ts  prefs.ts  runtime.ts
src/views/: HomeView.vue  LogsWindow.vue  SettingsView.vue
