[package]
name = "moonproxy-desktop"
version = "1.1.1"
description = "MoonProxy - a cross-platform GUI client for frp"
authors = ["MoonProxyHQ"]
edition = "2021"

[lib]
name = "moonproxy_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "tray-icon", "image-png", "image-ico", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", default-features = false, features = ["time", "net", "io-util", "rt", "rt-multi-thread", "sync", "macros"] }
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
semver = "1"
sysinfo = "0.32"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
